<?xml version="1.0"?>
<package format="2">
  <name>com3_msgs</name>
  <version>0.0.0</version>
  <description>The com3_msgs package</description>

  <maintainer email="yamauchi-g573bs@pwri.go.jp">Genki Yamauchi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
