<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>excavator_com3_ros</name>
  <version>0.0.0</version>
  <description>Excavator COM3 ROS package</description>
  <maintainer email="yamauchi-g573bs@pwri.go.jp">Genki Yamauchi </maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>com3_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
